[FIX] mail: not able to see attachment preview in mobile
Chat window having higher z-index value then attachment preview model and in the
mobile chat windows are covers whole screen so attachment preview is hidden behind
chat window. so increasing preview model's z-index by 1 will fix the issue.

(PR #24065)

--- a/addons/mail/static/src/less/composer.less
+++ b/addons/mail/static/src/less/composer.less
@@ -334,6 +334,7 @@
 }
 
 .o_modal_fullscreen {
+    z-index:  @o-chat-window-zindex + 1;
     .o-viewer-black-btn () {
         background-color: fade(black, 40%);
         color: fade(@gray-lighter, 70%);
